--- a/.github/workflows/deploy_on_TestFlight.yml
+++ b/.github/workflows/deploy_on_TestFlight.yml
@@ -74,7 +74,7 @@ jobs:
       - name: Archive app
         # 빌드 및 아카이브
         run: |
-          pod install --repo-update --clean-install --project-directory=/
+          pod install --repo-update --clean-install --project-directory=/Semo
           xcodebuild clean archive -workspace $XC_WORKSPACE -scheme $XC_SCHEME -configuration release -archivePath $XC_ARCHIVE
       - name: Export app
         # export 를 통해 ipa 파일 만듦
