--- a/.github/workflows/deploy_on_TestFlight.yml
+++ b/.github/workflows/deploy_on_TestFlight.yml
@@ -71,12 +71,25 @@ jobs:
               UUID=`/usr/libexec/PlistBuddy -c 'Print :UUID' /dev/stdin <<< $(security cms -D -i ./$PROVISION)`
             cp "./$PROVISION" "$HOME/Library/MobileDevice/Provisioning Profiles/$UUID.mobileprovision"
           done
+      - name: Print project directory and files
+      run: |
+        echo "Project directory: $(pwd)"
+        echo "Files in project directory:"
+        ls -al
+          
       - name: Archive app
         # 빌드 및 아카이브
         run: |
           cd Semo
           pod install --repo-update --clean-install
           xcodebuild clean archive -workspace $XC_WORKSPACE -scheme $XC_SCHEME -configuration release -archivePath $XC_ARCHIVE
+    
+      - name: Print project directory and files
+      run: |
+        echo "Project directory: $(pwd)"
+        echo "Files in project directory:"
+        ls -al
+        
       - name: Export app
         # export 를 통해 ipa 파일 만듦
         run: |
